Adding list beers, enhancing beerdto with inventory information

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 logging.level.com.drifai=debug
 spring.datasource.initialization-mode=EMBEDDED
+sfg.brewery.beer-inventory-service-host=http://localhost:8082
