--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ sfg.brewery.beer-inventory-service-host=http://localhost:8082
 spring.cache.jcache.config=classpath:ehcache.xml
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.h2.console.enabled=true
+#defaults for the Docker image https://github.com/vromero/activemq-artemis-docker
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
