--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 logging.level.com.drifai=debug
+logging.level.guru.springframework=debug
 spring.datasource.initialization-mode=EMBEDDED
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
 spring.cache.jcache.config=classpath:ehcache.xml
