Configure beer-order-service gateway route, add customer service, and fix validate order queuename bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.com.drifai=debug
+logging.level.com.drifai=info
 logging.level.guru.springframework=debug
 spring.datasource.initialization-mode=EMBEDDED
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
@@ -8,3 +8,4 @@ spring.h2.console.enabled=true
 #defaults for the Docker image https://github.com/vromero/activemq-artemis-docker
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+#logging.file=/Users/drifa/eclipse-workspace-spring-framework-courses/logs/inventory-service.log
