--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
         <dependency>
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
-        </dependency>  
+        </dependency> 
+         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency> 
         
    		<dependency>
 			<groupId>org.springframework.restdocs</groupId>
