--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=beer-service
 logging.level.com.drifai=info
 logging.level.guru.springframework=debug
 spring.datasource.initialization-mode=EMBEDDED
