Adding spring cloud config client

--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -19,6 +19,9 @@ spring.datasource.hikari.cacheServerConfiguration=true
 spring.datasource.hikari.elideSetAutoCommits=true
 spring.datasource.hikari.maintainTimeStats=false
 
+#disable service discovery
+spring.cloud.discovery.enabled=false
+
 # Enable logging for config troubleshooting
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
