--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.h2.console.enabled=true
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 #logging.file=/Users/drifa/eclipse-workspace-spring-framework-courses/logs/inventory-service.log
+spring.zipkin.baseUrl=http://localhost:9411/
