--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
-        </dependency>        
+        </dependency> 
+        <dependency>
+        	<groupId>net.logstash.logback</groupId>
+        	<artifactId>logstash-logback-encoder</artifactId>
+        	<version>6.5</version>
+        </dependency>       
    		<dependency>
 			<groupId>org.springframework.restdocs</groupId>
 			<artifactId>spring-restdocs-mockmvc</artifactId>
