Update BOM and remove common dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 #logging.file=/Users/drifa/eclipse-workspace-spring-framework-courses/logs/inventory-service.log
 spring.zipkin.enabled=false
+# Spring Data hangs when not set under Spring Boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
